--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_calendar">Calendar</string>
-    <string name="menu_home">Home</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_event">Event</string>
+    <string name="menu_notes">Notes</string>
+    <string name="menu_note">Note</string>
 </resources>
