--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="menu_event">Event</string>
     <string name="menu_notes">Notes</string>
     <string name="menu_note">Note</string>
+    <string name="menu_profile">Profile</string>
+    <string name="menu_about">About</string>
+    <string name="menu_logout">LogOut</string>
+
 </resources>
