--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+
     <string name="app_name">Planner</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -7,6 +8,8 @@
     <string name="nav_header_desc">Planner</string>
     <string name="action_settings">Settings</string>
 
+    <string name="menu_item_main">Main</string>
+    <string name="menu_item_actions">Actions</string>
     <string name="menu_calendar">Calendar</string>
     <string name="menu_event">Event</string>
     <string name="menu_notes">Notes</string>
