--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="menu_profile">Profile</string>
     <string name="menu_about">About</string>
     <string name="menu_logout">LogOut</string>
+    <string name="label_add_note">New Note</string>
     <string name="label_login">LogIn</string>
     <string name="label_registration">Registration</string>
 
