--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="menu_item_actions">Actions</string>
     <string name="menu_calendar">Calendar</string>
     <string name="menu_event">Event</string>
+    <string name="menu_new_event">New Event</string>
     <string name="menu_notes">Notes</string>
     <string name="menu_note">Note</string>
     <string name="menu_profile">Profile</string>
@@ -41,8 +42,10 @@
     <string name="save_btn">Save</string>
     <string name="logout_btn">Log Out</string>
     <string name="switch_themes">Night Theme</string>
+    <string name="switch_all_days">All Days</string>
     <string name="user_saved">User saved successfully!</string>
     <string name="note_saved">Note saved successfully!</string>
+    <string name="event_saved">Event saved successfully!</string>
     <string name="tittle_field_error">Tittle field is required!</string>
     <string name="note_field_error">Note field is required!</string>
     <string name="no_results">No results 😓</string>
