--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="tittle_field_error">Tittle field is required!</string>
     <string name="note_field_error">Note field is required!</string>
     <string name="no_results">No results 😓</string>
+    <string name="no_events">No events</string>
     <string name="menu_edit">Edit</string>
     <string name="menu_delete">Delete</string>
 
