--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="name_hint">Name</string>
     <string name="tittle_hint">Tittle</string>
     <string name="note_hint">Note</string>
+    <string name="description_hint">Description</string>
     <string name="password_hint">Password</string>
     <string name="email_hint">Email</string>
     <string name="name_field_error">Name field is required!</string>
@@ -46,6 +47,7 @@
     <string name="user_saved">User saved successfully!</string>
     <string name="note_saved">Note saved successfully!</string>
     <string name="event_saved">Event saved successfully!</string>
+    <string name="event_date">Event Date</string>
     <string name="tittle_field_error">Tittle field is required!</string>
     <string name="note_field_error">Note field is required!</string>
     <string name="no_results">No results 😓</string>
